--- a/OnlineExamSystem/OnlineExamSystem/OnlineExamSystem.csproj
+++ b/OnlineExamSystem/OnlineExamSystem/OnlineExamSystem.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Migrations\QuizOnline\Configuration.cs" />
     <Compile Include="Models\Choice.cs" />
     <Compile Include="Models\Exhibit.cs" />
+    <Compile Include="Models\ManageFolder\SessionModel.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\QuestionCategory.cs" />
     <Compile Include="Models\QuestionXDuration.cs" />
