--- a/OnlineExamSystem/OnlineExamSystem/OnlineExamSystem.csproj
+++ b/OnlineExamSystem/OnlineExamSystem/OnlineExamSystem.csproj
@@ -135,9 +135,26 @@
     <Compile Include="Migrations\QuizOnline\202002271102026_InitialCreate.designer.cs">
       <DependentUpon>202002271102026_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\QuizOnline\202002271418122_InitialCreate1.cs" />
+    <Compile Include="Migrations\QuizOnline\202002271418122_InitialCreate1.designer.cs">
+      <DependentUpon>202002271418122_InitialCreate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\QuizOnline\202002271534565_InitialCreate2.cs" />
+    <Compile Include="Migrations\QuizOnline\202002271534565_InitialCreate2.designer.cs">
+      <DependentUpon>202002271534565_InitialCreate2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\QuizOnline\202002271541336_InitialCreate3.cs" />
+    <Compile Include="Migrations\QuizOnline\202002271541336_InitialCreate3.designer.cs">
+      <DependentUpon>202002271541336_InitialCreate3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\QuizOnline\202002271552063_InitialCreate4.cs" />
+    <Compile Include="Migrations\QuizOnline\202002271552063_InitialCreate4.designer.cs">
+      <DependentUpon>202002271552063_InitialCreate4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\QuizOnline\Configuration.cs" />
     <Compile Include="Models\Choice.cs" />
     <Compile Include="Models\Exhibit.cs" />
+    <Compile Include="Models\ManageFolder\QuestionModel.cs" />
     <Compile Include="Models\ManageFolder\SessionModel.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\QuestionCategory.cs" />
@@ -187,6 +204,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Instruction.cshtml" />
+    <Content Include="Views\Home\EvalPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -207,6 +226,18 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\QuizOnline\202002271102026_InitialCreate.resx">
       <DependentUpon>202002271102026_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\QuizOnline\202002271418122_InitialCreate1.resx">
+      <DependentUpon>202002271418122_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\QuizOnline\202002271534565_InitialCreate2.resx">
+      <DependentUpon>202002271534565_InitialCreate2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\QuizOnline\202002271541336_InitialCreate3.resx">
+      <DependentUpon>202002271541336_InitialCreate3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\QuizOnline\202002271552063_InitialCreate4.resx">
+      <DependentUpon>202002271552063_InitialCreate4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
